k8s/production/logs-collector.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: otel-logs-collector
  namespace: newsletter
spec:
  selector:
    matchLabels:
      app: otel-logs-collector
  template:
    metadata:
      labels:
        app: otel-logs-collector
    spec:
      serviceAccountName: otel-logs-collector
      containers:
        - name: otel-collector
          image: otel/opentelemetry-collector-contrib:0.119.0
          imagePullPolicy: IfNotPresent
          args:
            - --config=/conf/otel-collector-config.yaml
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 256Mi
          volumeMounts:
            - name: config
              mountPath: /conf
            - name: varlogcontainers
              mountPath: /var/log/containers
              readOnly: true
            - name: varlogpods
              mountPath: /var/log/pods
              readOnly: true
            - name: varlibdockercontainers
              mountPath: /var/lib/docker/containers
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: otel-logs-collector-config
        - name: varlogcontainers
          hostPath:
            path: /var/log/containers
        - name: varlogpods
          hostPath:
            path: /var/log/pods
        - name: varlibdockercontainers
          hostPath:
            path: /var/lib/docker/containers
            type: DirectoryOrCreate
